--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,8 @@ server_tokens: 0
 require_environment: 1
 session_name: perldance.session
 conference_name: "Perl Dancer Conference 2016"
+guru_min_level_auto_speaker: 80
+
 t_shirt_sizes:
   - 'XS'
   - 'XS (W)'
