--- a/config.yml
+++ b/config.yml
@@ -108,11 +108,13 @@ plugins:
         provider: 'DBIC'
         db_connection_name: 'default'
         users_resultset: User
+        roles_resultset: Role
+        user_roles_resultset: UserRole
         roles_relationship: roles
-        role_column: name
-        username_column: username
-        password_column: password
-        password_check: check_password
+        roles_role_column: name
+        users_username_column: username
+        users_password_column: password
+        users_password_check: check_password
   DBIC:
     default:
       dsn: dbi:Pg:dbname=perldance
